--- a/research.html
+++ b/research.html
@@ -48,15 +48,24 @@
 				<tr><td><a href="https://www.semanticscholar.org/author/Hui-Liu/2146672447" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="20" class="pop2"></a></td><td>2146672447</td></tr>
 				<tr><td><a href="https://www.webofscience.com/wos/author/record/ACZ-9903-2022" target="_blank" rel="noopener noreferrer"><img src="images/WoS.png" height="20" class="pop2"></a></td><td>ACZ-9903-2022</td></tr>
 				<tr><td></td></tr>
+				<tr><td>Your contribution is welcome:</td></tr>
 				<tr>
 					<td>
-						Your contribution is welcome:<br>
-						<i>Sensors for Human Activity Recognition</i><br>
-						(Vol. II)
+						<a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><img src="images/Biosensors.png" height="40"></a>
+						&nbsp;&nbsp; <a href=""><img src="images/Download.png" height="15"></a>
 					</td>
+					<td>
+						<i>Innovative Technologies of Acquiring, Processing, Modeling, or Utilizing Biomedical and Physiological Signals from Biosensing</i>
+					</td>
+				</tr>
+				<tr>
 					<td>
 						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="40"></a>
 						&nbsp;&nbsp; <a href="https://www.mdpi.com/journal/sensors/special_issue_flyer_pdf/Sensors_Human_Activity_Recognition/web"><img src="images/Download.png" height="15"></a>
+					</td>
+					<td>
+						<i>Sensors for Human Activity Recognition</i><br>
+						(Vol. II)
 					</td>
 				</tr>
 			</table></td></tr>
@@ -479,7 +488,9 @@
 					<td align="center">Guest Editor</td>
 					<td>
 						<img src="images/MDPI.png" height="25"><br>
-						&#9679; <img src="images/Sensors.png" height="15">	Sensors Special Issues <i>Sensors for Human Activity Recognition</i>: 
+						&#9679; <img src="images/Biosensors.png" height="20">	Biosensors Special Issue  
+						<a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><i>Innovative Technologies of Acquiring, Processing, Modeling, or Utilizing Biomedical and Physiological Signals from Biosensing</i></a><br>
+						&#9679; <img src="images/Sensors.png" height="20">	Sensors Special Issues <i>Sensors for Human Activity Recognition</i>: 
 						<a href="https://www.mdpi.com/journal/sensors/special_issues/Sensors_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer">Edition I</a>
 						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer">Edition II</a>
 					</td>
@@ -492,7 +503,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Program Chair</td>
+					<td align="center">Conference Program Chair (PC)</td>
 					<td>
 						<a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="23" class="pop1"></a> &nbsp
 						<a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="23" class="pop1"></a><br>
@@ -500,11 +511,18 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">Conference Area Chair</td>
+					<td align="center">Conference Technical Program Chair (TPC)</td>
+					<td>
+						<a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="35" class="pop1"></a><br>
+						&#9679; ArtInHCI 2024 - 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction
+					</td>
+				</tr>
+				<tr>
+					<td align="center">Conference Area Chair (AC)</td>
 					<td>
 						<a href="https://e-nns.org/icann2024/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
-						&#9679; BIOSIGNALS 2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
-						<a href="https://www.ceii.asia" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="30" class="pop1"></a><br>
+						&#9679; ICANN 2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
+						<a href="https://www.ceii.asia/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="35" class="pop1"></a><br>
 						&#9679; CEII 2024 - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
@@ -587,10 +605,14 @@
 					<td>&#9679; Tutorial: <a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a></td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://bbdc.csl.uni-bremen.de/index.php/2019h/25-bbdc-2019" target="_blank" rel="noopener noreferrer"><img src="images/BBDC2019.png" height="60"></a><br>4th Bremen Big Data Challenge<br>BBDC 2019</td>
+					<td align="center">
+						<img src="images/BBDC2019.png" height="70"> 
+						<img src="images/BBDC2024.png" height="70"><br>
+						Bremen Big Data Challenge (BBDC)
+					</td>
 					<td>
-						&#9679;  Big data acquisition, processing, and provision (individually)<br>
-						&#9679;  More than 60 teams from north German universities participated in the final round
+						&#9679;  4<sup>th</sup> <a href="https://www.uni-bremen.de/csl/media/news/news/bremen-big-data-challenge-2019-studierende-aus-bremen-und-umzu-analysieren-grosse-datenmengen-um-alltagsaktivitaeten-zu-erkennen" target="_blank" rel="noopener noreferrer">BBDC 2019</a>: Big data acquisition, processing, and provision (individually). More than 60 teams from north German universities participated in the final round</br>
+						&#9679;  9<sup>th</sup> <a href="https://bbdc.csl.uni-bremen.de/en/2024-2/pupils/" target="_blank" rel="noopener noreferrer">BBDC 2024</a>: Main responsible orgnizer for Basic Track
 					</td>
 				</tr>
 			</table></td></tr>
@@ -616,12 +638,8 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://www.pluxbiosignals.com/" target="_blank" rel="noopener noreferrer"><img src="images/PLUX.png" height="60" class="pop1"></a><br>PLUX Wireless Biosignals S.A.</td>
-					<td>&#9679; <a href="https://qrco.de/bdHmtW" target="_blank" rel="noopener noreferrer">Scientific Consultant</a><td>
-				</tr>
-				<tr>
 					<td align="center"><a href="https://www.bridge-online.de/campusideen" target="_blank" rel="noopener noreferrer"><img src="images/CAMPUSiDEEN22.jpg" height="50" class="pop5"></a><br>CAMPUSiDEEN 2022<br>Business Idea Competition</td>
-					<td>&#9679; Public Choice Award <img src="images/CAMPUSiDEEN.png" width="17" class="pop40"><td>
+					<td>&#9679; <a href="https://bridge-online.de/en/campusideen/review/2022-3rd-audience-award" target="_blank" rel="noopener noreferrer">3<sup>rd</sup> Audience Award</a> <img src="images/CAMPUSiDEEN.png" width="17" class="pop40"><td>
 				</tr>
 			</table></td></tr>
 
@@ -722,6 +740,23 @@
 				</tr>
 				<tr>
 					<td align="center">
+						<a href="https://www.pluxbiosignals.com/" target="_blank" rel="noopener noreferrer"><img src="images/PLUX.png" height="60" class="pop1"></a><br>
+						From 2019<br>
+						PLUX Wireless Biosignals S.A.
+					</td>
+					<td>
+						&#9679; (Specially Appointed) <a href="https://qrco.de/bdHmtW" target="_blank" rel="noopener noreferrer">Senior Research Engineer</a><br>
+						&#9679; Organizing joint research, educational and social activities between the company and universities<br>
+						&#9679; Researching and developing real-time recognition and feedback technologies<br>
+						&#9679; Advising the development of multimodal wearable biomedical signal acquisition software<br>
+						&#9679; Participating in planning for the open-source "biosignal notebooks" tutorial and writing chapters<br>
+						&#9679; Planning, assisting and developing business expansion activities in Germany and Asia<br>
+						&#9679; Guiding and supervising students to conduct cross-border internships<br>
+						&#9679; Publishing excellent research results on PLUX products<br>
+					<td>
+				</tr>
+				<tr>
+					<td align="center">
 						<a href="https://www.uni-bremen.de/en/" target="_blank" rel="noopener noreferrer"><img src="images/UB.png" height="40"></a>&nbsp;&nbsp;
 						<a href="https://www.uni-bremen.de/en/csl" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="40"></a><br>
 						From 2021<br>
@@ -732,6 +767,19 @@
 						&nbsp;&nbsp; <a href="https://www.uni-bremen.de/en/csl/institute/team/staff/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/EN.svg" height="12" class="pop2"></a>
 						&nbsp;&nbsp; <a href="https://www.uni-bremen.de/csl/institut/team/mitarbeiter/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/DE.svg" height="12" class="pop2"></a>
 						&nbsp;&nbsp;&nbsp; <a href="https://www.uni-bremen.de/en/csl/institute/team/staff" target="_blank" rel="noopener noreferrer"><img src="images/CSLTeam.png" height="14" class="pop40"></a>
+					</td>
+				</tr>
+				<tr>
+					<td align="center">
+						<a href="https://www.uni-bremen.de/en/" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.png" height="40"></a>&nbsp;&nbsp;
+						<a href="https://www.uni-bremen.de/en/csl" target="_blank" rel="noopener noreferrer"><img src="images/LIBPhys-UNL.png" height="50"></a><br>
+						From 2022<br>
+						LIBPhys: Laboratory for Instrumentation,<br>
+						Biomedical Engineering and Radiation Physics,<br>
+						Universidade NOVA de Lisboa 
+					</td>
+					<td>
+						&#9679; Visiting scientist funded by YERUN Research Mobility Award (YRMA)
 					</td>
 				</tr>
 			</table></td></tr>
