--- a/researchcn.html
+++ b/researchcn.html
@@ -49,14 +49,23 @@
 				<tr><td><a href="https://www.semanticscholar.org/author/Hui-Liu/2146672447" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="20" class="pop2"></a></td><td>2146672447</td></tr>
 				<tr><td><a href="https://www.webofscience.com/wos/author/record/ACZ-9903-2022" target="_blank" rel="noopener noreferrer"><img src="images/WoS.png" height="20" class="pop2"></a></td><td>ACZ-9903-2022</td></tr>
 				<tr><td></td></tr>
+				<tr><td>欢迎您将最新学术成果投稿：</td></tr>
 				<tr>
 					<td>
-						欢迎您将最新学术成果投稿：<br>
-						《面向人体动作的传感器研究 卷II》</b>
+						<a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><img src="images/Biosensors.png" height="40"></a>
+						&nbsp;&nbsp; <a href=""><img src="images/Download.png" height="15"></a>
 					</td>
+					<td>
+						<i>采集、处理、建模或利用生物医学和生理信号的新颖技术</i>
+					</td>
+				</tr>
+				<tr>
 					<td>
 						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="40"></a>
 						&nbsp;&nbsp; <a href="https://www.mdpi.com/journal/sensors/special_issue_flyer_pdf/Sensors_Human_Activity_Recognition/web"><img src="images/Download.png" height="15"></a>
+					</td>
+					<td>
+						<i>《面向人体动作的传感器研究 卷II》</i><br>
 					</td>
 				</tr>
 			</table></td></tr>
@@ -487,13 +496,15 @@
 					<td align="center">特邀编委</td>
 					<td>
 						<img src="images/MDPI.png" height="25"><br>
-						&#9679; <img src="images/Sensors.png" height="15">	Sensors 专刊 <i>Sensors for Human Activity Recognition</i>: 
+						&#9679; <img src="images/Biosensors.png" height="20">	Biosensors 专刊 
+						<a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><i>Innovative Technologies of Acquiring, Processing, Modeling, or Utilizing Biomedical and Physiological Signals from Biosensing</i></a><br>
+						&#9679; <img src="images/Sensors.png" height="20">	Sensors 专刊 <i>Sensors for Human Activity Recognition</i>: 
 						<a href="https://www.mdpi.com/journal/sensors/special_issues/Sensors_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer">卷I</a>
 						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer">卷II</a>
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议 Program Chair</td>
+					<td align="center">学术会议 Program Chair (PC)</td>
 					<td>
 						<a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="23" class="pop1"></a> &nbsp
 						<a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="23" class="pop1"></a><br>
@@ -501,11 +512,18 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议 Area Chair</td>
+					<td align="center">学术会议 Technical Program Chair (TPC)</td>
+					<td>
+						<a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="35" class="pop1"></a><br>
+						&#9679; ArtInHCI 2024 - 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction
+					</td>
+				</tr>
+				<tr>
+					<td align="center">学术会议 Area Chair (AC)</td>
 					<td>
 						<a href="https://e-nns.org/icann2024/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
 						&#9679; ICANN 2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
-						<a href="https://www.ceii.asia" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="30" class="pop1"></a><br>
+						<a href="https://www.ceii.asia/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="30" class="pop1"></a><br>
 						&#9679; CEII 2024 - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
@@ -583,10 +601,14 @@
 					<td>&#9679; 特邀技术展示 <img src="images/KD2School_Workshop.png" width="22" class="pop40"></td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://bbdc.csl.uni-bremen.de/index.php/2019h/25-bbdc-2019" target="_blank" rel="noopener noreferrer"><img src="images/BBDC2019.png" height="60"></a><br>第4届北德大数据竞赛<br>BBDC 2019</td>
+					<td align="center">
+						<img src="images/BBDC2019.png" height="70"> 
+						<img src="images/BBDC2024.png" height="70"><br>
+						北德大数据竞赛 (BBDC)
+					</td>
 					<td>
-						&#9679; （独立承担）大数据采集、处理和提供工作<br>
-						&#9679; 北德数十所高校的60多支队伍参加最后的角逐
+						&#9679;  第四届 <a href="https://www.uni-bremen.de/csl/media/news/news/bremen-big-data-challenge-2019-studierende-aus-bremen-und-umzu-analysieren-grosse-datenmengen-um-alltagsaktivitaeten-zu-erkennen" target="_blank" rel="noopener noreferrer">BBDC 2019</a>：（独立承担）大数据采集、处理和提供工作。北德数十所高校的60多支队伍参加最后的角逐</br>
+						&#9679;  第九届 <a href="https://bbdc.csl.uni-bremen.de/en/2024-2/pupils/" target="_blank" rel="noopener noreferrer">BBDC 2024</a>：Basic Track总负责人。获得德国近十所高校以及来北德多个教育主管机构的广泛关注与支持
 					</td>
 				</tr>
 			</table></td></tr>
@@ -611,12 +633,8 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://www.pluxbiosignals.com/" target="_blank" rel="noopener noreferrer"><img src="images/PLUX.png" height="60" class="pop1"></a><br>葡萄牙 PLUX<br>无线生物信号传感器公司</td>
-					<td>&#9679; <a href="https://qrco.de/bdHmtW" target="_blank" rel="noopener noreferrer">科技顾问</a><td>
-				</tr>
-				<tr>
 					<td align="center"><a href="https://www.bridge-online.de/campusideen" target="_blank" rel="noopener noreferrer"><img src="images/CAMPUSiDEEN22.jpg" height="50" class="pop5"></a><br>CAMPUSiDEEN 2022<br>商业创意大赛<br></td>
-					<td>&#9679; 公共选择奖 <img src="images/CAMPUSiDEEN.png" width="17" class="pop40"><td>
+					<td>&#9679; <a href="https://bridge-online.de/en/campusideen/review/2022-3rd-audience-award" target="_blank" rel="noopener noreferrer">公共选择奖</a> <img src="images/CAMPUSiDEEN.png" width="17" class="pop40"><td>
 				</tr>
 			</table></td></tr>
 			<tr><td></td></tr><tr><td></td></tr>
@@ -720,6 +738,24 @@
 				</tr>
 				<tr>
 					<td align="center">
+						<a href="https://www.pluxbiosignals.com/" target="_blank" rel="noopener noreferrer"><img src="images/PLUX.png" height="60" class="pop1"></a><br>
+						2019年以来<br>
+						PLUX无线生物信号传感器公司<br>
+						（葡萄牙里斯本）
+					</td>
+					<td>
+						&#9679; 特聘<a href="https://qrco.de/bdHmtW" target="_blank" rel="noopener noreferrer">高级研发工程师</a><br>
+						&#9679; 组织企业和大学之间的合作研究、教育和社会活动<br>
+						&#9679; 研发实时识别与反馈技术<br>
+						&#9679; 为多模态可穿戴生物医学信号采集软件的开发提供咨询<br>
+						&#9679; 参与开源《Biosignal Notebooks》教程的策划并编写代码、撰写章节<br>
+						&#9679; 规划、协助和开展在公司在德国和亚洲的业务扩展活动<br>
+						&#9679; 派遣和指导博士生、硕士生和本科生进行跨境科研实习或论文答辩<br>
+						&#9679; 发表企业产品的优秀研究成果<br>
+					<td>
+				</tr>
+				<tr>
+					<td align="center">
 						<a href="https://www.uni-bremen.de/" target="_blank" rel="noopener noreferrer"><img src="images/UB.png" height="40"></a>&nbsp;&nbsp;
 						<a href="https://www.uni-bremen.de/csl" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="40"></a><br>
 						2021年以来<br>
@@ -730,6 +766,18 @@
 						&nbsp;&nbsp; <a href="https://www.uni-bremen.de/en/csl/institute/team/staff/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/EN.svg" height="12" class="pop2"></a>
 						&nbsp;&nbsp; <a href="https://www.uni-bremen.de/csl/institut/team/mitarbeiter/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/DE.svg" height="12" class="pop2"></a>
 						&nbsp;&nbsp;&nbsp; <a href="https://www.uni-bremen.de/csl/institut/team/mitarbeiter" target="_blank" rel="noopener noreferrer"><img src="images/CSLTeam.png" height="14" class="pop40"></a>
+					</td>
+				</tr>
+				<tr>
+					<td align="center">
+						<a href="https://www.uni-bremen.de/en/" target="_blank" rel="noopener noreferrer"><img src="images/NOVA.png" height="40"></a>&nbsp;&nbsp;
+						<a href="https://www.uni-bremen.de/en/csl" target="_blank" rel="noopener noreferrer"><img src="images/LIBPhys-UNL.png" height="50"></a><br>
+						2022年以来<br>
+						新里斯本大学 LIBPhys<br>
+						仪器、生医工和放射物理所
+					</td>
+					<td>
+						&#9679; YERUN科研流动奖金资助的访问学者
 					</td>
 				</tr>
 			</table></td></tr>
