--- a/art.html
+++ b/art.html
@@ -59,7 +59,7 @@
 				
 				<tr><td><font size="5">Previous Contributions</font></td></tr>
 				<tr>
-					<td>&#9679; <b>The 3<sup>rd</sup> <a href="http://www.ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer">German Chinese Drama Festival for University Students</a></b><br>
+					<td>&#9679; <b>The <a href="http://www.ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer">3<sup>rd</sup></a> and <a href="https://www.ci.fudan.edu.cn/ec/e2/c569a453858/page.htm" target="_blank" rel="noopener noreferrer">6<sup>th</sup></a> Konfuzius European Drama Festival for University Students</b><br>
 						&nbsp;&nbsp;&nbsp;<i>Konfuzius-Institut Frankfurt am Main, Germany</i>
 					</td>
 					<td>Judge;<br>Stage Performance Lecturer</td>
