--- a/artcn.html
+++ b/artcn.html
@@ -60,7 +60,7 @@
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
 					<td>
-						<a href="http://www.ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer"><b>德国中国话剧戏剧节（法兰克福）</b></a><br>担任评委/舞台表演讲座Workshop<br><br>
+						<b>欧洲孔子学院大学生戏剧节（原德国大学生话剧节）</b><br>担任评委/舞台表演讲座Workshop<br><br>
 						&#9679; 第三届 <a href="https://www.ccc-paris.org/zh/2019%E5%B9%B46%E6%9C%887%E6%97%A5%E8%87%B38%E6%97%A5/" target="_blank" rel="noopener noreferrer">巴黎中国文化中心</a> 
 						<a href="https://ices.fudan.edu.cn/ab/e0/c6812a175072/page.htm" target="_blank" rel="noopener noreferrer">复旦大学报导</a><br>
 						&#9679; 第六届 <a href="https://www.163.com/dy/article/HC80FBKK0514A015.html" target="_blank" rel="noopener noreferrer">文化部中国文化网</a> 
