--- a/research.html
+++ b/research.html
@@ -7,6 +7,7 @@
 			body {font: normal 16px Verdana, Arial, sans-serif;}
 			img {transition: transform .5s;}
 			img:hover {transform: scale(2.5);}
+			.slightpop:hover {transform: scale(1.05)}
 			.pop1:hover {transform: scale(1.6);}
 			.pop5:hover {transform: scale(5);}
 			.pop15:hover {transform: scale(15);}
@@ -895,8 +896,12 @@
 			</table></td></tr>
 
 			<tr><td><table align="left" cellpadding="15">
-				<tr><td><b>My research group (partially, 2023)</b></td></tr>
-				<tr><td><a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" class="round" height="300" class="pop1"></a><br></td></tr>
+				<tr><td><b>My research group (partially, 2023/2024)</b></td></tr>
+				<tr><td>
+					<a href="images/students/Students.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students.jpg" height="400" class="slightpop"></a><br><br>
+					Left: Hasanur, Romina, Johann, Izzie, Daniel, Hannes, Abhinav, and Rakibul<br>
+					Right: Nazia, Alenna, Md. Asif, Arthur, Rakubur, Robin, Shiyao, Jie, Ferdinand, and Yvo
+				</td></tr>
 			</table></td></tr>
 
 			<tr><td><table align="left" cellpadding="15">
@@ -1015,10 +1020,12 @@
 						&copy;<b>Shiyao Zhang</b>
 					</td>
 					<td>
-						Research assistant since 2022<br>
+						Research assistant and convenor of Hui Liu's research group since 2022<br>
+						Bachelor thesis 2024 @ Bremen, Germany (full score)<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Artifacts during biosignal acquisition<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time ECG signal processing<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Convenor of Hui Liu's research group
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time ECG signal processing
+						<br><br>
+						&rarr; Master student @ University of Bremen<br>
 					</td>
 				</tr>
 
@@ -1311,6 +1318,28 @@
 					<td>
 						Graduation research in progress<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Piano self-learning feedback based on finger and pitch recognition
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/Jie_Su.jpg" width="150" class="round"></a><br>
+						&copy;<b>Jie Su</b>
+					</td>
+					<td>
+						Graduation research in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; HAR in VR
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/Nazia_Nusrat_Ima.jpg" width="150" class="round"></a><br>
+						&copy;<b>Nazia Nusrat Ima</b>
+					</td>
+					<td>
+						Graduation research in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; APP of community development and online activities for Bangladeshi lonely elderly people
 					</td>
 				</tr>
 
