--- a/researchcn.html
+++ b/researchcn.html
@@ -7,6 +7,7 @@
 			body {font: normal 16px Verdana, Arial, sans-serif;}
 			img {transition: transform .5s;}
 			img:hover {transform: scale(2.5);}
+			.slightpop:hover {transform: scale(1.05);}
 			.pop1:hover {transform: scale(1.6);}
 			.pop5:hover {transform: scale(5);}
 			.pop15:hover {transform: scale(15);}
@@ -894,14 +895,17 @@
 			</table></td></tr>
 
 			<tr><td><table align="left" cellpadding="15">
-				<tr><td><b>指导的科研小组部分成员合影（2023）</b></td></tr>
-				<tr><td><a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" height="300" class="round"></a><br>
+				<tr><td><b>指导的科研小组部分成员合影（2023/2024）</b></td></tr>
+				<tr><td>
+					<a href="images/students/Students.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students.jpg" height="400" class="slightpop"></a><br><br>
+					左：Hasanur、Romina、Johann、Izzie、Daniel、Hannes、Abhinav、Rakibul<br>
+					右：Nazia、Alenna、Md. Asif、Arthur、Rakubur、Robin、Shiyao、Jie、Ferdinand、Yvo
 				</td></tr>
 			</table></td></tr>
 
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td><b>指导的优秀科研助理以及毕设学生列表</b></a></td>
+					<td><b>指导的优秀科研助理以及毕设学生</b></a></td>
 					<td align="center" colspan="2">
 						<img src="images/DE.svg" height="40" class="round"> 
 						<img src="images/BD.png" height="40" class="round"> 
@@ -976,7 +980,7 @@
 						&copy;<b>Kilian Lüdemann（德）</b>
 					</td>
 					<td>
-						本科毕设 2021 @ 德国不来梅<br>
+						本科毕设 2021 @ 德国不来梅（等级：“好”）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于RNN的红外视频摔倒识别
 						<br><br>
 						&rarr;  软件工程师 @ RealCore集团（埃森）
@@ -1016,8 +1020,11 @@
 					</td>
 					<td>
 						科研助理和研究小组召集人 自2022<br>
+						本科毕设 2024 @ 德国不来梅（满分）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 生物信号采集过程中的伪影识别<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时心电信号处理
+						<br><br>
+						&rarr; 硕士研究生 @ 不来梅大学
 					</td>
 				</tr>
 
@@ -1114,7 +1121,7 @@
 						&copy;<b>Ciwan Gülpinar（德；库尔德裔）</b>
 					</td>
 					<td>
-						本科毕设 2023 @ 德国不来梅<br>
+						本科毕设 2023 @ 德国不来梅（等级：“好”）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 元宇宙中生物信号的可视化和交互<br>
 						<br><br>
 						&rarr; 硕士研究生 @ 不来梅大学
@@ -1138,7 +1145,7 @@
 						<b>Daniel Ott（德）</b>
 					</td>
 					<td>
-						本科毕设 2023 @ 德国不来梅（非常优异）<br>
+						本科毕设 2023 @ 德国不来梅（等级：“非常优异”）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计和用户体验分析
 					</td>
 				</tr>
@@ -1182,7 +1189,7 @@
 						&copy;<b>Thorben Lorenzen（德）</b>
 					</td>
 					<td>
-						硕士毕设 2024 @ 德国不来梅<br>
+						硕士毕设 2024 @ 德国不来梅（等级：“好”）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 针对钢琴自学的基于肌电的手指识别
 						<br><br>
 						&rarr; 数据工程师 @ 慕尼黑
@@ -1196,7 +1203,7 @@
 						&copy;<b>Leon Flaack（德；日裔）</b>
 					</td>
 					<td>
-						本科毕设 2024 @ 德国不来梅<br>
+						本科毕设 2024 @ 德国不来梅（等级：“好”）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于LSTM的MIDI主旋律通道自动识别
 						<br><br>
 						&rarr; 海外交换 @ 东京
@@ -1306,11 +1313,33 @@
 				<tr>
 					<td align="center">
 						<img src="images/students/David_Czesla.jpg" width="150" class="round"></a><br>
-						&copy;<b>David Czesla</b>
+						&copy;<b>David Czesla（德）</b>
 					</td>
 					<td>
 						毕设进行<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于手指和音高识别的钢琴自学反馈系统
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/Jie_Su.jpg" width="150" class="round"></a><br>
+						&copy;<b>苏杰</b>
+					</td>
+					<td>
+						毕设进行<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; VR中的人体动作识别
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/Nazia_Nusrat_Ima.jpg" width="150" class="round"></a><br>
+						&copy;<b>Nazia Nusrat Ima（孟）</b>
+					</td>
+					<td>
+						毕设进行<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 孟加拉国独居老人社群拓展和线上活动APP
 					</td>
 				</tr>
 
@@ -1321,10 +1350,8 @@
 						&copy;<b></b>
 					</td>
 					<td>
-						毕设 202 @ 德国不来梅<br>
+						毕设进行<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 
-						<br><br>
-						&rarr; 
 					</td>
 				</tr>
 				-->		
