--- a/reviewer.html
+++ b/reviewer.html
@@ -18,9 +18,11 @@
 		<br>
 		<img src="images/Elsevier.png" height="30" class="pop1"> <img src="images/ScienceDirect.png" height="30" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
+		&#9679; Physical Communication<br>
 		<br>
 		<img src="images/TaylorFrancis.png" height="30" class="pop1"><br>
-		&#9679; Geo-spatial Information Science<br>
+		&#9679; Geo-Spatial Information Science<br>
+		&#9679; Imaging Science Journal, The<br>
 		<br>
 		<img src="images/IOP.png" height=25"><br>
 		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
@@ -40,6 +42,9 @@
 		<br>
 		<img src="images/ACCSCIENCE.png" height="30" class="pop1"><br>
 		&#9679; Arts & Communication<br>
+		<br>
+		<img src="images/APASCI.png" height="35" class="pop1"><br>
+		&#9679; Environment and Social Psychology<br>
 		<br>
 		<img src="images/MDPI.png" height="30" class="pop1"><br>
 		&#9679; Algorithms<br>
