--- a/reviewer.html
+++ b/reviewer.html
@@ -18,9 +18,12 @@
 		<br>
 		<img src="images/Elsevier.png" height="30" class="pop1"> <img src="images/ScienceDirect.png" height="30" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
+		&#9679; Physical Communication<br>
 		<br>
 		<img src="images/TaylorFrancis.png" height="30" class="pop1"><br>
 		&#9679; Geo-spatial Information Science<br>
+		&#9679; The Imaging Science Journal<br>
+		&#9679; Computer Methods in Biomechanics and Biomedical Engineering<br>
 		<br>
 		<img src="images/IOP.png" height=25"><br>
 		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
