--- a/researchcn.html
+++ b/researchcn.html
@@ -207,13 +207,22 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer">10.3389/fphys.2024.1344887</a>
 				</tr></td>
 				<tr><td>
-					<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126. MDPI.<br>
+					<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126.<br>
 					<a href="https://scholar.google.com/scholar?q=Understanding+Naturalistic+Facial+Expressions+with+Deep+Learning+and+Multimodal+Large+Language+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Understanding-Naturalistic-Facial-Expressions-with-Bian-K%C3%BCster/6dbb5a3f98625d7d090b37ae36dbf3e64d1f1d0e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/376840648_Understanding_Naturalistic_Facial_Expressions_with_Deep_Learning_and_Multimodal_Large_Language_Models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/1/126" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=bian2024mllm_facial_expression&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24010126" target="_blank" rel="noopener noreferrer">10.3390/s24010126</a>
+				</tr></td>
+				<tr><td>
+					<i>Cardiorespiratory Response to Workload Volume and Ergonomic Risk: Automotive Assembly Line Operators’ Adaptations.</i> Furk, D., Silva, L.*, Dias, M., Fujão, C., Probst, P., Liu, H., Gamboa, H. (2024). Applied Sciences, 14(9):3921.<br>
+					<a href="https://scholar.google.com/scholar?q=Cardiorespiratory+Response+to+Workload+Volume+and+Ergonomic+Risk%3A+Automotive+Assembly+Line+Operators’+Adaptations" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380382468_Cardiorespiratory_Response_to_Workload_Volume_and_Ergonomic_Risk_Automotive_Assembly_Line_Operators'_Adaptations" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/2076-3417/14/9/3921	" target="_blank" rel="noopener noreferrer"><img src="images/Applied_Sciences.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=furk202cardiorespiratory&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/app14093921" target="_blank" rel="noopener noreferrer">10.3390/app14093921</a>
 				</tr></td>
 				<tr><td>
 					<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology, 14:1282295.<br>
